--- a/.github/workflows/main_az204examcramwld3wv4ntbyxq(testing).yml
+++ b/.github/workflows/main_az204examcramwld3wv4ntbyxq(testing).yml
@@ -11,7 +11,10 @@ on:
 
 env:
   AZURE_FUNCTIONAPP_PACKAGE_PATH: '.' # set this to the path to your web app project, defaults to the repository root
-  DOTNET_VERSION: 'v4.0' # set this to the dotnet version to use
+  DOTNET_VERSION: '6.0.x' # set this to the dotnet version to use
+  AZURE_FA_NAME: 'az204examcramwld3wv4ntbyxq' # Put your app name here
+  AZURE_FA_SLOT: 'staging' # staging by default but you could put it in Production if you want 
+  AZURE_PUBLISH_PROFILE_SECRET: ${{ secrets.AZUREAPPSERVICE_PUBLISHPROFILE_C1D422DC9842400EB6CBCA1E997812FE }} #Make sure you create a secret with the publish profile
 
 jobs:
   build-and-deploy:
@@ -36,7 +39,7 @@ jobs:
         uses: Azure/functions-action@v1
         id: fa
         with:
-          app-name: 'az204examcramwld3wv4ntbyxq'
-          slot-name: 'testing'
+          app-name: '${{ env.AZURE_FA_NAME }}'
+          slot-name: '${{ env.AZURE_FA_SLOT }}'
           package: '${{ env.AZURE_FUNCTIONAPP_PACKAGE_PATH }}/output'
-          publish-profile: ${{ secrets.AZUREAPPSERVICE_PUBLISHPROFILE_C1D422DC9842400EB6CBCA1E997812FE }}
+          publish-profile: ${{ env.AZURE_PUBLISH_PROFILE_SECRET }}
